--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -92,7 +92,7 @@
                                 <div class="messages"></div>
                             </div>
                             <div class="form-group">
-                                <input name="websource" id="websource" value="Website" type="hidden">
+                                <input name="websource" id="websource" value="SEM - Google Ads" type="hidden">
                                 <div class="messages"></div>
                             </div>
                             <div class="form-group">
