--- a/site/layouts/partials/form.html
+++ b/site/layouts/partials/form.html
@@ -32,7 +32,7 @@
                 <div class="messages"></div>
             </div>
             <div class="form-group">
-                <input name="websource" value="Website" type="hidden">
+                <input name="websource" value="SEM - Google Ads" type="hidden">
                 <div class="messages"></div>
             </div>
             <div class="form-group">
