--- a/site/layouts/partials/form.html
+++ b/site/layouts/partials/form.html
@@ -41,6 +41,7 @@
                 <div class="messages"></div>
             </div>
             <div class="form-group">
+                <input type="hidden" id="gclid_field" name="gclid_field" value="">
                 <input name="btnSubmit" id="btnSubmitBottom" type="submit" value="GET HELP NOW">
                 <div class="messages"></div>
             </div>
