--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -16,7 +16,7 @@
         <img src="" data-src="{{ .Site.BaseURL }}img/header_divider.png" class="img-fluid lazyload" alt="">
         <section class="hablamos24" style="width:100%;">
           <div class="hablamos24__wrap capPhone big_text5" style="width: 100%;">
-            <span>HABLAMOS ESPANOL &#8226; AVAILABLE 24/7</span>
+            <span>HABLAMOS ESPAÑOL &#8226; AVAILABLE 24/7</span>
           </div>
         </section>
       </div>
@@ -30,7 +30,7 @@
              class="img-fluid lazyload" alt="Wilshire Law Firm logo">
       </section>
       <div class="hablamos24__wrap capPhone">
-        <span>HABLAMOS ESPANOL &#8226; AVAILABLE 24/7</span>
+        <span>HABLAMOS ESPAÑOL &#8226; AVAILABLE 24/7</span>
       </div>
       <div class="header__rightsection">
         <a class="header__phonenum capPhone font-weight-semi" href="tel:18889791278" onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Header Mobile Call- 1.888.979.1278'});">
