updated the JS for gclid incusion and updated the bottom footer gclid id

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -49,7 +49,7 @@
                             <div class="messages"></div>
                         </div>
                         <div class="form-group whywlf__submit">
-                            <input type="hidden" id="gclid_field" name="gclid_field" value="">
+                            <input type="hidden" id="gclid_field_bottom" name="gclid_field" value="">
                             <input name="btnSubmit" id="btnSubmitBottom" type="submit" value="GET HELP NOW">
                             <div class="messages"></div>
                         </div>
