--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -30,7 +30,7 @@
              class="img-fluid lazyload" alt="Wilshire Law Firm logo">
       </section>
       <div class="hablamos24__wrap capPhone">
-        <span>HABLAMOS ESPANOL &#8226; AVAILABLE 24/7</span>
+        <span>HABLAMOS ESPAÑOL &#8226; AVAILABLE 24/7</span>
       </div>
       <div class="header__rightsection">
         <a class="header__phonenum capPhone font-weight-semi" href="tel:18889791278" onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Header Mobile Call- 1.888.979.1278'});">
