--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -40,6 +40,7 @@
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
+                            <input type="hidden" id="gclid_field_bottom" name="gclid_field" value="">
                             <input name="websource" value="SEM - Google Ads" type="hidden">
                             <div class="messages"></div>
                         </div>
