updated copy and set phone number to new dedicated Phone for Age Disc

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Whistleblower Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Age Discrimination Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -65,19 +65,21 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Whistleblower Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Age Discrimination Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
 
                     <p>
-                        California Labor codes 1102.5 and Code Section 6310, an employer cannot discharge or discriminate against an employee who has made a compliant or testified against their company for reporting company misconduct. This also means that if you are a
-                        whistleblower, your company can't legally retaliate against you, nor can a company enforce rules that would prevent you from being a whistleblower. Whistleblower rights exist to help keep companies in check and those brave enough to expose a company's
-                        wrong doings shouldn't be punished for doing so. If you feel that you have been retaliated against for whistleblowing, then you need to hire a whistleblowing discrimination lawyer who can protect your rights. Our whistleblowing lawyers are prepared to
-                        aggressively fight not only to protect your whistleblowing rights, but that you're compensated for losses or damages you may have sustained as a result of retaliation. Wilshire Law Firm's legal methods work, proof being that we've won our clients more
-                        than 750 million dollars in compensation. Retaliation for whistleblowing is never an acceptable approach a company should take against their employees. Seek justice today by calling Wilshire Law Firm for a free case consultation.
-
+                       Federally, both the Age Discrimination in Employment Act of 1967 and the Older Workers Benefit Protection Act prohibit employers from discriminating against you because of your age.
+                        On the state level, California's Fair Employment and Housing Act (FEHA) protects those over the age of 40 from discriminatory practices. But, 64 percent of workers say that they have
+                        either seen or faced age discrimination in the workplace. It is never acceptable for the workplace to do any of the following due to your age: treat you differently, harass you, or
+                        terminate you. If you believe that you have been subjected to age discrimination, you need to hire an age discrimination lawyer from Wilshire Law Firm. When human resources and
+                        employers fail you, you need someone you can trust with your case. Our age discrimination lawyers will not only take your complaints seriously, but have the legal expertise and
+                        the know-how to fight for you. With over 130 professionals working for Wilshire Law Firm, you can feel confident that your case is in good hands! We've proven this by winning more than
+                        750 million dollars in compensation for our clients. It's time that companies who employ discriminatory and ageist practices be punished. Call Wilshire Law Firm today for a
+                        free consultation!
                     </p>
                 </div>
 
