--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -1025,6 +1025,8 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
         height: 38px;
         padding: 12px;
     }
+    .footer .footer__address {font-size: 14px;}
+    .footer .footer__copyright {font-size: 14px;}
     .wlf-form input[type=text]{
         padding: 0 0 0 12px;
     }
