--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Age Discrimination Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Gender Discrimination Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -65,21 +65,20 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Age Discrimination Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Gender Discrimination Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
 
                     <p>
-                       Federally, both the Age Discrimination in Employment Act of 1967 and the Older Workers Benefit Protection Act prohibit employers from discriminating against you because of your age.
-                        On the state level, California's Fair Employment and Housing Act (FEHA) protects those over the age of 40 from discriminatory practices. But, 64 percent of workers say that they have
-                        either seen or faced age discrimination in the workplace. It is never acceptable for the workplace to do any of the following due to your age: treat you differently, harass you, or
-                        terminate you. If you believe that you have been subjected to age discrimination, you need to hire an age discrimination lawyer from Wilshire Law Firm. When human resources and
-                        employers fail you, you need someone you can trust with your case. Our age discrimination lawyers will not only take your complaints seriously, but have the legal expertise and
-                        the know-how to fight for you. With over 130 professionals working for Wilshire Law Firm, you can feel confident that your case is in good hands! We've proven this by winning more than
-                        750 million dollars in compensation for our clients. It's time that companies who employ discriminatory and ageist practices be punished. Call Wilshire Law Firm today for a
-                        free consultation!
+                        The Civil Rights Act of 1964 makes it clear that it is illegal to be discriminated against because of your race, color, religion, sex and national origin. Furthermore, according to California's Equal Pay Act,
+                        employers must pay “employees who perform ‘substantially similar work,' when viewed as a composite of skill, effort, and responsibility” equal pay and, yet, women earn; on average, 19 percent less than men!
+                        This is just one example of how gender discrimination is still an issue in the workplace for both men and women. If you feel like your employer or supervisor has discriminated against you because of your gender,
+                        then it's time to hire a Wilshire Law Firm gender discrimination lawyer. Wilshire Law Firm's gender discrimination lawyers aim is to help you get justice against companies that have employed discriminatory practices.
+                        We have proved time and time again that we not only win cases, but help to double and even quadruple compensation. To date, we have won more than 170 million dollars for our clients! If you feel like you were harassed,
+                        denied a job or promotion, paid lower wages, or faced other discriminatory actions from your workplace because of your gender, call today to schedule a free consultation with one of Wilshire Law Firm's top gender
+                        discrimination lawyers!
                     </p>
                 </div>
 
