Updated Workplace Discrimination Lawyer Text and Phone Numbers

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Gender Discrimination Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Workplace Discrimination Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -72,13 +72,14 @@
                     </div>
 
                     <p>
-                        The Civil Rights Act of 1964 makes it clear that it is illegal to be discriminated against because of your race, color, religion, sex and national origin. Furthermore, according to California's Equal Pay Act,
-                        employers must pay “employees who perform ‘substantially similar work,' when viewed as a composite of skill, effort, and responsibility” equal pay and, yet, women earn; on average, 19 percent less than men!
-                        This is just one example of how gender discrimination is still an issue in the workplace for both men and women. If you feel like your employer or supervisor has discriminated against you because of your gender,
-                        then it's time to hire a Wilshire Law Firm gender discrimination lawyer. Wilshire Law Firm's gender discrimination lawyers aim is to help you get justice against companies that have employed discriminatory practices.
-                        We have proved time and time again that we not only win cases, but help to double and even quadruple compensation. To date, we have won more than 170 million dollars for our clients! If you feel like you were harassed,
-                        denied a job or promotion, paid lower wages, or faced other discriminatory actions from your workplace because of your gender, call today to schedule a free consultation with one of Wilshire Law Firm's top gender
-                        discrimination lawyers!
+                        Federally, Title VII of the Civil Rights Act of 1964 protects employees from being racially discriminated against. California's Fair Employment and Housing Act solidifies this stand by making it unlawful
+                        "for any person to discriminate against any person in the selection, termination, training or other terms or treatment of that person…because of race." These laws prevent companies from treating employees
+                        differently because of their race or implementing workplace practices that have a negative impact on certain races. Common examples of racial discrimination include lower rages, failure to provide benefits,
+                        unnecessarily disciplining or even firing employees, or implementing policies that hair be styled a certain way. If you feel like your workplace has racially discriminated against you, then it's time to hire a
+                        race discrimination lawyer from Wilshire Law Firm! Wilshire Law Firm's racial discrimination lawyers have one goal: to help you seek justice against companies that have wronged you through discriminatory practices.
+                        We have proven time and time against that our techniques work and have won our clients more than 170 million dollars in compensation! Companies believe that their discriminatory practices will go unchallenged but
+                        our racial discrimination lawyers will show them otherwise. By bringing your case to us, you're not only seeking justice for yourself, but helping to prevent employers from discriminating against others. For a
+                        free consultation on your case, call Wilshire Law Firm.
                     </p>
                 </div>
 
