--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -10,7 +10,7 @@
                         </div>
                     </h1>
                     <h2 class="d-sm-block d-md-block d-lg-none big_text2 font-weight-regular text-center">
-                        <span>Award-winning Gender Discrimination Lawyers</span>
+                        <span>Award-winning Workplace Discrimination Lawyers</span>
                     </h2>
                 </div>
                 <div class="standard hero__attorneys">
