updated verbiage to workplace discrimination lawyer

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -65,7 +65,7 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Gender Discrimination Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Workplace Discrimination Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
