updated messaging and phone numbers

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Workplace Discrimination Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Racial Discrimination Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -73,13 +73,13 @@
 
                     <p>
                         Federally, Title VII of the Civil Rights Act of 1964 protects employees from being racially discriminated against. California's Fair Employment and Housing Act solidifies this stand by making it unlawful
-                        "for any person to discriminate against any person in the selection, termination, training or other terms or treatment of that person…because of race." These laws prevent companies from treating employees
+                        “for any person to discriminate against any person in the selection, termination, training or other terms or treatment of that person…because of race.” These laws prevent companies from treating employees
                         differently because of their race or implementing workplace practices that have a negative impact on certain races. Common examples of racial discrimination include lower rages, failure to provide benefits,
-                        unnecessarily disciplining or even firing employees, or implementing policies that hair be styled a certain way. If you feel like your workplace has racially discriminated against you, then it's time to hire a
-                        race discrimination lawyer from Wilshire Law Firm! Wilshire Law Firm's racial discrimination lawyers have one goal: to help you seek justice against companies that have wronged you through discriminatory practices.
-                        We have proven time and time against that our techniques work and have won our clients more than 170 million dollars in compensation! Companies believe that their discriminatory practices will go unchallenged but
-                        our racial discrimination lawyers will show them otherwise. By bringing your case to us, you're not only seeking justice for yourself, but helping to prevent employers from discriminating against others. For a
-                        free consultation on your case, call Wilshire Law Firm.
+                        unnecessarily disciplining or even firing employees, or implementing policies that hair be styled a certain way. If you feel like your workplace has racially discriminated against you, then it's time to hire
+                        a race discrimination lawyer from Wilshire Law Firm! Wilshire Law Firm's racial discrimination lawyers have one goal: to help you seek justice against companies that have wronged you through discriminatory
+                        practices. We have proven time and time against that our techniques work and have won our clients more than 170 million dollars in compensation! Companies believe that their discriminatory practices will go
+                        unchallenged but our racial discrimination lawyers will show them otherwise. By bringing your case to us, you're not only seeking justice for yourself, but helping to prevent employers from discriminating against
+                        others. For a free consultation on your case, call Wilshire Law Firm.
                     </p>
                 </div>
 
