updated messaging and phone numbers

--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -36,7 +36,7 @@
                         </h1>
                         <h2 class="">
                             <div class="headline__big-text2 font-weight-regular">
-                                <div>Award-Winning Workplace Discrimination Lawyers</div>
+                                <div>Award-Winning Racial Discrimination Lawyers</div>
                             </div>
                         </h2>
                         <picture class="superlawyers">
