update Employment LP Age Discrimination with edits from Content Team: https://docs.google.com/document/d/1_qmglHOzNEjrHG9TIzcWZ-yYvkGqx3cXbtVidgrBspI/edit?usp=sharing
both content and CSS edits

--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -1,18 +1,17 @@
 <section class="capabilities">
     <div class="container practice-areas">
-        <h2 class="text-center font-weight-bold">WHAT WE CAN DO FOR YOU</h2>
+        <h2 class="text-center font-weight-bold">What you can get with our team</h2>
         <div class="what-we-can-do-container">
             <div class="specialty">
                 <div class="capability capability__max-compensation icon-max-compensation">
                 </div>
-                <span class="capability__message">Receive Max<br />Compensation</span>
+                <span class="capability__message">Maximum<br />Compensation</span>
             </div>
             <div class="specialty">
                 <div class="capability capability__medical-paid icon-privacy">
                 </div>
-                <span class="capability__message">Discrete And<br />Professional</span>
+                <span class="capability__message">Discreet<br />representation</span>
             </div>
-
             <div class="specialty">
                 <div class="capability icon-lost-wages">
                 </div>
@@ -21,16 +20,16 @@
             <div class="specialty">
                 <div class="capability icon-come2you">
                 </div>
-                <span class="capability__message">We'll Come<br />To You</span>
+                <span class="capability__message">Attorneys who<br />travel to you</span>
             </div>
             <div class="specialty">
                 <div class="capability icon-psych">
                 </div>
-                <span class="capability__message">Get Counseling<br />You Need</span>
+                <span class="capability__message">Help accessing<br />counseling</span>
             </div>
             <div class="specialty">
                 <div class="capability icon-cash-advance"></div>
-                <span class="capability__message">Cash Advance<br />On Your Case</span>
+                <span class="capability__message">A cash advance<br />on your case</span>
             </div>
         </div>
     </div>
