--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -23,7 +23,7 @@
     <div class="container-fluid u-remove-all-padding">
         <div class="subhero">
             <div class="subhero__as-seen-on">
-                <span>And recognized in</span>
+                <span>Recognized in</span>
                 <div class="subhero__as-seen-on-icons images-in-a-row">
 
                     <div class="icon-latimes"></div>
