--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -72,14 +72,34 @@
                     </div>
 
                     <p>
-                       Federally, both the Age Discrimination in Employment Act of 1967 and the Older Workers Benefit Protection Act prohibit employers from discriminating against you because of your age.
-                        On the state level, California's Fair Employment and Housing Act (FEHA) protects those over the age of 40 from discriminatory practices. But, 64 percent of workers say that they have
-                        either seen or faced age discrimination in the workplace. It is never acceptable for the workplace to do any of the following due to your age: treat you differently, harass you, or
-                        terminate you. If you believe that you have been subjected to age discrimination, you need to hire an age discrimination lawyer from Wilshire Law Firm. When human resources and
-                        employers fail you, you need someone you can trust with your case. Our age discrimination lawyers will not only take your complaints seriously, but have the legal expertise and
-                        the know-how to fight for you. With over 130 professionals working for Wilshire Law Firm, you can feel confident that your case is in good hands! We've proven this by winning more than
-                        750 million dollars in compensation for our clients. It's time that companies who employ discriminatory and ageist practices be punished. Call Wilshire Law Firm today for a
-                        free consultation!
+                        Federally, both the Age Discrimination in Employment Act of 1967 (ADEA) and the Older Workers
+                        Benefit Protection Act prohibit employers from discriminating against you because of your age.
+                        On the state level, California's Fair Employment and Housing Act (FEHA) protects those over the
+                        age of 40 from discriminatory practices. <strong>Yet, 64% of workers say that they have
+                        either seen or faced age discrimination in the workplace.</strong></p>
+                    <p>
+                        It is never acceptable for the
+                        workplace to do any of the following due to your age:
+                    </p>
+                    <ul>
+                        <li>Treat you differently</li>
+                        <li>Harass you</li>
+                        <li>Terminate you</li>
+                    </ul>
+                    <p>
+                        <span class="tab"></span>
+                        If you believe that you have been subjected to age discrimination, then <strong>it’s time to hire an
+                        attorney who can help protect your rights to the fullest.</strong> Our age discrimination lawyers at
+                        Wilshire Law Firm will take your complaint seriously, working tirelessly to get you the justice
+                        and compensation you rightfully deserve.
+                    </p>
+                    <p>
+                        When you work with Wilshire Law Firm, you can feel confident that your case is in good hands!
+                        We've proven this by winning <strong>hundreds of millions of dollars in compensation</strong> for our clients.
+                    </p>
+                    <p>
+                        It's time to hold companies accountable for their ageist and discriminatory actions. <strong>Call
+                        Wilshire Law Firm today for a free consultation!</strong>
                     </p>
                 </div>
 
