--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -877,8 +877,8 @@ a.nav-link {
 
 
 .wlf-form ul {
-    list-style: none;
-    padding: 0
+    /*list-style: none;*/
+    /*padding: 0*/
 }
 
 .wlf-form ul label {
@@ -1594,7 +1594,7 @@ img {
 
 @media only screen and (min-width:992px) {
     .specialty {
-        padding: 0 20px;
+        padding: 0;
         width: 16.6%;
     }
 }
