content edits: https://docs.google.com/document/d/1_qmglHOzNEjrHG9TIzcWZ-yYvkGqx3cXbtVidgrBspI/edit?usp=sharing

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -70,15 +70,26 @@
 
                         </div>
                     </div>
-
                     <p>
-                        The Civil Rights Act of 1964 makes it clear that it is illegal to be discriminated against because of your race, color, religion, sex and national origin. Furthermore, according to California's Equal Pay Act,
-                        employers must pay “employees who perform ‘substantially similar work,' when viewed as a composite of skill, effort, and responsibility” equal pay and, yet, women earn; on average, 19 percent less than men!
-                        This is just one example of how gender discrimination is still an issue in the workplace for both men and women. If you feel like your employer or supervisor has discriminated against you because of your gender,
-                        then it's time to hire a Wilshire Law Firm gender discrimination lawyer. Wilshire Law Firm's gender discrimination lawyers aim is to help you get justice against companies that have employed discriminatory practices.
-                        We have proved time and time again that we not only win cases, but help to double and even quadruple compensation. To date, we have won more than 170 million dollars for our clients! If you feel like you were harassed,
-                        denied a job or promotion, paid lower wages, or faced other discriminatory actions from your workplace because of your gender, call today to schedule a free consultation with one of Wilshire Law Firm's top gender
-                        discrimination lawyers!
+                        The Civil Rights Act of 1964 makes it illegal for employers to discriminate against you because
+                        of your race, color, national origin, religion, sex or sexual orientation. Furthermore,
+                        according to the California Equal Pay Act, employers must pay “employees who perform
+                        ‘substantially similar work,' when viewed as a composite of skill, effort, and responsibility”
+                        equal pay — yet, women earn, on average, 19% less than men. This is just one example of how
+                        gender discrimination is still an issue in the workplace for both men and women.
+                    </p>
+                    <p>
+                        If you feel like your employer or supervisor has treated you unfairly because of your gender,
+                        then <strong>it's time to take action.</strong> Our gender discrimination lawyers at Wilshire Law firm can help
+                        you seek justice against. We have proven time and time again that we not only win cases, but we
+                        also help our clients secure the full payment to which they are entitled — sometimes doubling,
+                        tripling, or even quadrupling their compensation. To date, we have won <strong>hundreds of millions of
+                        dollars in settlements and verdicts</strong> for our clients!
+                    </p>
+                    <p>
+                        If you feel like you were harassed, denied a job or promotion, paid lower wages, or
+                        discriminated against in some other way in the workplace because of your gender, don’t let your
+                        employer off the hook. <strong>Call today to schedule a free consultation!</strong>
                     </p>
                 </div>
 
