--- a/site/layouts/partials/whywlf.html
+++ b/site/layouts/partials/whywlf.html
@@ -1,8 +1,8 @@
 <div class="whywlf mobile-desktop">
-    <h2 class="font-weight-bold">WHY WILSHIRE LAW FIRM</h2>
+    <h2 class="font-weight-bold">WHY WILSHIRE LAW FIRM?</h2>
     <p>
-        Our award-winning team of more than 100 legal professionals doesn’t leave any case up to chance. We confidently
-        prepare every case for trial and are not afraid to take your case to court. Our innovative legal strategies will
+        Our team of more than 100 legal professionals doesn’t leave any case up to chance. We confidently
+        prepare every case for trial and are not afraid to take your claim to court. Our innovative legal strategies will
         get you the absolute best result—since 2007, we’ve recovered more than $750,000,000 on behalf of clients just
         like you.
     </p>
