content edits: https://docs.google.com/document/d/1_qmglHOzNEjrHG9TIzcWZ-yYvkGqx3cXbtVidgrBspI/edit?usp=sharing

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -72,14 +72,34 @@
                     </div>
 
                     <p>
-                        Federally, Title VII of the Civil Rights Act of 1964 protects employees from being racially discriminated against. California's Fair Employment and Housing Act solidifies this stand by making it unlawful
-                        "for any person to discriminate against any person in the selection, termination, training or other terms or treatment of that person…because of race." These laws prevent companies from treating employees
-                        differently because of their race or implementing workplace practices that have a negative impact on certain races. Common examples of racial discrimination include lower rages, failure to provide benefits,
-                        unnecessarily disciplining or even firing employees, or implementing policies that hair be styled a certain way. If you feel like your workplace has racially discriminated against you, then it's time to hire a
-                        race discrimination lawyer from Wilshire Law Firm! Wilshire Law Firm's racial discrimination lawyers have one goal: to help you seek justice against companies that have wronged you through discriminatory practices.
-                        We have proven time and time against that our techniques work and have won our clients more than 170 million dollars in compensation! Companies believe that their discriminatory practices will go unchallenged but
-                        our racial discrimination lawyers will show them otherwise. By bringing your case to us, you're not only seeking justice for yourself, but helping to prevent employers from discriminating against others. For a
-                        free consultation on your case, call Wilshire Law Firm.
+                        The Civil Rights Act of 1964 offers protections for workers from various forms of discrimination
+                        by their employers, including discrimination on the basis of:
+                    </p>
+                    <ul>
+                        <li>Race</li>
+                        <li>Color</li>
+                        <li>National origin</li>
+                        <li>Religion</li>
+                        <li>Sex</li>
+                        <li>Sexual orientation</li>
+                    </ul>
+                    <p>
+                        Additionally, both the federal government and the state of California have various laws that
+                        offer further protections within these categories, as well as in others such as age. When
+                        employers violate anti-discrimination laws, they can be held legally accountable and forced to
+                        not only stop their unfair practices, but also to
+                        <strong>pay damages to any affected employees.</strong>
+                    </p>
+                    <p>
+                        If you feel that your employer has treated you unfairly because of your sex, race, age, etc.,
+                        (i.e., they used your status as part of their decision to underpay you, deny you a promotion,
+                        fire you, etc.), you should seek legal counsel immediately. Our workplace discrimination
+                        attorneys help you prove wrongdoing by your employer and obtain the full compensation you
+                        deserve.
+                    </p>
+                    <p>
+                        <strong>Request a free consultation to find out how our team can assist you in your
+                            case!</strong>
                     </p>
                 </div>
 
