content edits as found in: https://docs.google.com/document/d/1_qmglHOzNEjrHG9TIzcWZ-yYvkGqx3cXbtVidgrBspI/edit?usp=sharing

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -72,14 +72,32 @@
                     </div>
 
                     <p>
-                        Federally, Title VII of the Civil Rights Act of 1964 protects employees from being racially discriminated against. California's Fair Employment and Housing Act solidifies this stand by making it unlawful
-                        “for any person to discriminate against any person in the selection, termination, training or other terms or treatment of that person…because of race.” These laws prevent companies from treating employees
-                        differently because of their race or implementing workplace practices that have a negative impact on certain races. Common examples of racial discrimination include lower rages, failure to provide benefits,
-                        unnecessarily disciplining or even firing employees, or implementing policies that hair be styled a certain way. If you feel like your workplace has racially discriminated against you, then it's time to hire
-                        a race discrimination lawyer from Wilshire Law Firm! Wilshire Law Firm's racial discrimination lawyers have one goal: to help you seek justice against companies that have wronged you through discriminatory
-                        practices. We have proven time and time against that our techniques work and have won our clients more than 170 million dollars in compensation! Companies believe that their discriminatory practices will go
-                        unchallenged but our racial discrimination lawyers will show them otherwise. By bringing your case to us, you're not only seeking justice for yourself, but helping to prevent employers from discriminating against
-                        others. For a free consultation on your case, call Wilshire Law Firm.
+                        Federally, Title VII of the Civil Rights Act of 1964 protects employees from being racially
+                        discriminated against. California's Fair Employment and Housing Act (FEHA) solidifies this stand
+                        by making it unlawful "for any person to discriminate against any person in the selection,
+                        termination, training or other terms or treatment of that person… because of race."
+                        These laws prevent companies from treating employees differently because of their race or
+                        implementing workplace practices that have a negative impact on certain races. Racial
+                        discrimination cases often involve unfair employer actions such as the following:
+                    </p>
+                    <ul>
+                        <li>Lower wages</li>
+                        <li>Failure to provide benefits</li>
+                        <li>Unnecessary disciplining or even firing of employees</li>
+                        <li>Implementation policies that prohibit certain hairstyles (which can disproportionately affect
+                            certain races)</li>
+                    </ul>
+                    <p>
+                        If you feel like you have been racially discriminated against in the workplace, then it's time
+                        to stand up for your rights! Wilshire Law Firm's racial discrimination lawyers have one goal: to
+                        help you seek justice against your employer and recover the fair copmensation you deserve. We
+                        have won our clients hundreds of millions of dollars in settlements and verdicts, and we
+                        want to help you, too.
+                    </p>
+                    <p>
+                        By bringing your case to us, you're not only seeking justice for yourself, but you’re also
+                        helping to put a stop to your employer’s discriminatory acts, which could affect others in the
+                        future. <strong>Fill out this form to receive a free consultation from Wilshire Law Firm!</strong>
                     </p>
                 </div>
 
