--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -5,12 +5,12 @@
             <div class="specialty">
                 <div class="capability capability__max-compensation icon-max-compensation">
                 </div>
-                <span class="capability__message">Receive Max<br />Compensation</span>
+                <span class="capability__message">Maximum<br />Compensation</span>
             </div>
             <div class="specialty">
                 <div class="capability capability__medical-paid icon-privacy">
                 </div>
-                <span class="capability__message">Discrete And<br />Professional</span>
+                <span class="capability__message">Discrete<br />representation</span>
             </div>
 
             <div class="specialty">
@@ -21,16 +21,16 @@
             <div class="specialty">
                 <div class="capability icon-come2you">
                 </div>
-                <span class="capability__message">We'll Come<br />To You</span>
+                <span class="capability__message">Attorneys who<br />Travel To You</span>
             </div>
             <div class="specialty">
                 <div class="capability icon-psych">
                 </div>
-                <span class="capability__message">Get Counseling<br />You Need</span>
+                <span class="capability__message">Help accessing<br />counseling</span>
             </div>
             <div class="specialty">
                 <div class="capability icon-cash-advance"></div>
-                <span class="capability__message">Cash Advance<br />On Your Case</span>
+                <span class="capability__message">A Cash Advance<br />On Your Case</span>
             </div>
         </div>
     </div>
