adjust copy in "capabilities"

--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -5,12 +5,12 @@
             <div class="specialty">
                 <div class="capability capability__max-compensation icon-max-compensation">
                 </div>
-                <span class="capability__message">Max<br />Compensation</span>
+                <span class="capability__message">Maximum<br />Compensation</span>
             </div>
             <div class="specialty">
                 <div class="capability capability__medical-paid icon-privacy">
                 </div>
-                <span class="capability__message">Discrete<br />representation</span>
+                <span class="capability__message">Discreet<br />representation</span>
             </div>
 
             <div class="specialty">
