age discrimination lp content changes: capabilities, why wlf p text

--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -1,6 +1,6 @@
 <section class="capabilities">
     <div class="container practice-areas">
-        <h2 class="text-center font-weight-bold">What you can get with our team</h2>
+        <h2 class="text-center font-weight-bold">WHAT WE CAN DO FOR YOU</h2>
         <div class="what-we-can-do-container">
             <div class="specialty">
                 <div class="capability capability__max-compensation icon-max-compensation">
