--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -7,6 +7,12 @@
         <div class="footer__copyright">&copy; 2020 Wilshire Law Firm |
             <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a>
         </div>
-        <p style="display:none;"><span style="display:none;">(844) 290-8890</span> <span style="display:none;">(714) 464-5658</span><span style="display:none;">&nbsp;(323) 863-2998</span> <span style="display: none;">(877) 250-5952</span></p>
+        <p style="display:none;">
+            <span style="display:none;">(844) 758-0388</span>
+            <span style="display:none;">(844) 290-8890</span>
+            <span style="display:none;">(714) 464-5658</span>
+            <span style="display:none;">(323) 863-2998</span>
+            <span style="display:none;">(877) 250-5952</span>
+        </p>
     </div>
 </div>
